<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="32dp"
    android:orientation="vertical"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimary"
        android:elevation="22dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingRight="4dp"
            app:srcCompat="@mipmap/textbooks_icon32" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingLeft="8dp"
            android:text="@string/about"
            android:textSize="28sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            android:paddingRight="4dp"
            app:srcCompat="@drawable/ic_action_close_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorBack"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/school_schedule"
            android:textSize="32sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="8dp"
            android:text="@string/about_text"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>